# google-trends-api

./: .gitignore  Procfile  docker-compose.yml  dockerfile  main.py  nixpacks.toml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  routes.py
app/schedule/: __init__.py  scheduler.py
app/utils/: __init__.py  data_formater.py  scraper.py
src/trends/: __init__.py  main.py  routes.py  scheduler.py  trends.py
