[project]
name = "trends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MatheusFontenele", email = "matheus.fontenele@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.2",
    "flask==2.3.2",
    "flask-apscheduler>=1.13.1",
    "gunicorn>=23.0.0",
    "lxml[html-clean]>=6.0.2",
    "playwright>=1.55.0",
    "redis==5.3.1",
    "requests==2.31.0",
    "requests-html==0.10.0",
    "waitress>=3.0.2",
    "websockets>=15.0.1",
]

[project.scripts]
trends = "trends:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
